# erc20-detector

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.local.yml  entrypoint.py  env.sample  pyproject.toml  settings.py  setup.py
src/: app.py  entrypoint.py  service.py  status.py
src/analyzers/: analyzers.py  contracts.py  exceptions.py  interfaces.py
src/constants/: erc20.py  openzeppelin_erc20.py
src/core/: file_utils.py  signatures.py
src/core/analyzers/: analyzers.py  contracts.py  exceptions.py  interfaces.py
src/core/constants/: erc20.py  openzeppelin_erc20.py  openzeppelinv2_erc20.py  openzeppelinv3_erc20.py  openzeppelinv4_erc20.py
src/core/detectors/: detectors.py  interfaces.py
src/detectors/: detectors.py  interfaces.py
src/entities/: signatures.py
src/storage/: config.py  interfaces.py  models.py  repository.py
tests/: test_service.py
tests/contracts/: IncorrectCompiler.sol  IncorrectVersion.sol  InjectiveToken.sol  ZeppelinERC20.sol
